<resources>
    <string name="app_name">Servant</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_server">Server</string>
    <string name="nav_header_module">Module</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="not_available">N/A</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="server_tooltip">Remote Host</string>
    <string name="servername_tooltip">Server Name</string>
    <string name="addserver_title">Add a Server</string>
    <string name="ok">OK</string>
    <string name="error_title">Something went wrong</string>
    <string name="error_details">Error Details:</string>
    <string name="saved_viewmodel">viewmodel</string>
    <string name="remove_approval">do you really want to delete instance "%s"?</string>
    <string name="result_title">Capability Result</string>
    <string name="result_name">capability: </string>
    <string name="result_fullname">fullname: </string>
    <string name="result_type">result:</string>
    <string name="result_message">message: </string>
</resources>
