<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_title"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/capability_fullname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="fullname"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_type"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:id="@+id/result_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="OK"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_message"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/result_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="result message"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
    </LinearLayout>
</layout>